# PyBoyAdvance

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yaml  publish-to-pypi.yaml  run-tests.yaml
build_utils/: constants_preprocessor.py  cython_guard_preprocessor.py  property_preprocessor.py
pyboy_advance/: __init__.py  __main__.py  constants.py  gba.pxd  gba.py  interrupt_controller.pxd  interrupt_controller.py  keypad.pxd  keypad.py  pyboy_advance.pxd  pyboy_advance.py  scheduler.pxd  scheduler.py  timer.pxd  timer.py  utils.pxd  utils.py
pyboy_advance/api/: screen.pxd  screen.py
pyboy_advance/app/: constants.py  window.pxd  window.py
pyboy_advance/cpu/: constants.py  constants.pyx  cpu.pxd  cpu.py  decode.py  memory.py  psr.py  registers.pxd  registers.py
pyboy_advance/cpu/arm/: alu.pxd  alu.py  bdt.pxd  bdt.py  branch.pxd  branch.py  constants.py  decode.pxd  decode.py  hwdt.pxd  hwdt.py  mul.pxd  mul.py  psr.pxd  psr.py  sdt.pxd  sdt.py  swi.pxd  swi.py  swp.pxd  swp.py
pyboy_advance/cpu/thumb/: alu.pxd  alu.py  bdt.pxd  bdt.py  branch.pxd  branch.py  constants.py  decode.pxd  decode.py  sdt.pxd  sdt.py  swi.pxd  swi.py
pyboy_advance/memory/: backup.pxd  backup.py  constants.py  constants.pyx  dma.pxd  dma.py  gamepak.pxd  gamepak.py  io.pxd  io.py  memory.pxd  memory.py
pyboy_advance/ppu/: constants.py  constants.pyx  memory.pxd  memory.py  ppu.pxd  ppu.py  registers.pxd  registers.py
tests/: conftest.py  test_armwrestler.py  test_fuzzarm.py  test_gba_tests.py  test_jsmolka.py  test_mgba.py  test_nba.py
