[build-system]
requires = [
    "setuptools",
    "wheel",
    "cython>=3.2; platform_python_implementation == 'CPython'",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyboy-advance"
version = "1.0.0"
authors = [{ name = "William Ha" }]
description = "Game Boy Advance emulator written in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "gameboy",
    "game boy",
    "game boy advance",
    "gameboy advance",
    "emulator",
    "cython",
    "pypy"
]
classifiers = [
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: System :: Emulators",
]
dependencies = [
    "numpy",
    "pysdl2",
    "pysdl2-dll"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyboy_advance**"]

[tool.setuptools.package-data]
"*" = [
    "**/*.pxi",
    "**/*.pyx",
    "**/*.pxd",
]

[project.scripts]
pyboy_advance = "pyboy_advance.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using SDL2 binaries from pysdl2-dll.*",
    "ignore:pysdl2-dll is installed as source-only.*"
]

[tool.ruff]
line-length = 100